# unimage-native

./: .gitignore  CApi.cpp  CApi.h  CMakeLists.txt  ErrorHandler.hpp  README.md  Unimage.cpp  Unimage.hpp
.github/workflows/: ci-android.yml  ci-darwin.yml  ci-linux-build.yml  ci-linux.yml  ci-windows.yml
loader/: LibJpegTurbo.cpp  StbImpl.cpp  StbImpl.hpp  WebP.cpp  WebP.hpp
scripts/: export-symbols.txt  ios-link.sh  unimage-config.cmake.in  unity-ios-link.sh
src/: CApi.cpp  CApi.h  CBinding.cpp  CBinding.h  ErrorHandler.cpp  Library.h  UnimageProcessor.cpp  UnimageProcessor.hpp
src/loader/: LibJpegTurbo.cpp  LibJpegTurbo.hpp  StbImpl.cpp  StbImpl.hpp  WebP.cpp  WebP.hpp
utils/: StaticForLoop.hpp
